--- a/thanks.html
+++ b/thanks.html
@@ -9,28 +9,20 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/bread/src/breadstyle.css" >
+  <link rel="stylesheet" href="/bread/src/index.css" >
 
 
 </head>
 <body >
       <div class="marginBottom">
         <img src="breadlogo.jpg" style="width: 100%; max-width: 130px">
-        <p>
-          <span style="font-size: 3rem">THE FAMOUS BREAD BRAND</span><br>
-          <nav class="copy">
-            <a href="/index.html">What's Hot</a> |
-            <a href="/about.html">About</a> |
-            <a href="/ad.html">Advertisement</a> |
-            <a href="/music.html">Music</a>
-          </nav>
         </p>
       </div>
       <hr style="max-width: 100px; margin: 0 auto; margin-bottom: 30px">
       <div>
         <p>THANK YOU!</p>
         <p class="copy"> Your payment has been received. Your custom wear is on the way and you rule the roost.</p>
-        <a href="index.html"><button class="btn">RETURN</button></a>
+        <a href="/"><button class="btn">RETURN</button></a>
       </div>
       <hr>
         <p><small>&copy;2018 Bread Denim Co.</small></p>
