--- a/thanks.html
+++ b/thanks.html
@@ -10,8 +10,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/bread/src/index.css" >
-
-
 </head>
 <body >
       <div class="marginBottom">
@@ -22,7 +20,7 @@
       <div>
         <p>THANK YOU!</p>
         <p class="copy"> Your payment has been received. Your custom wear is on the way and you rule the roost.</p>
-        <a href="/"><button class="btn">RETURN</button></a>
+        <a href="index.html"><button class="btn">RETURN</button></a>
       </div>
       <hr>
         <p><small>&copy;2018 Bread Denim Co.</small></p>
