--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,22 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-83380303-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-83380303-1');
+      </script>
+      <meta property="og:url"                content="http://www.nikodunk.github.io/bread" />
+      <meta property="og:type"               content="brand" />
+      <meta property="og:title"              content="The Famous Bread Brand" />
+      <meta property="og:description"        content="Premium Streetwear, Fit for the King of England" />
+      <meta property="og:image"              content="https://nikodunk.github.io/bread/SpringCampaign.jpg" />
+      <meta name="description" content="Welcome" />
+
   </head>
   <body>
     <noscript>
